--- a/index.html
+++ b/index.html
@@ -4,8 +4,9 @@
     <meta charset="utf-8">
     <title>Odin recipes </title>
   </head>
-  
+
   <body>
     <h1>Odin recipes</h1>
+    <a href="./recipes/stirfrycarrots.html">Link to stir fry carrots</a>
   </body>
 </html>
