finished recipe for carrots dish

--- a/recipes/stirfrycarrots.html
+++ b/recipes/stirfrycarrots.html
@@ -7,5 +7,25 @@
 </head>
 <body>
   <h1>Uncle Lau's stir fry carrots</h1>
+  <img src="../img/stirfrycarrotsjpeg" alt="Bowl of stir fry carrots and veggies">
+  <h1>Description</h1>
+  <p>Simple to make, only 4 ingredients, haiyaaa, anyone can do it!</p>
+  <h1>Ingredients</h1>
+  <ul>
+    <li>Carrots</li>
+    <li>Courgette</li>
+    <li>Garlic</li>
+    <li>Oil</li>
+  </ul>
+  <h1>Steps
+  </h1>
+  <ol>
+    <li>Cut the vegetables</li>
+    <li>Heat the wok</li>
+    <li>Add oil to the wok</li>
+    <li>Add the garlic first. Fry til fragrant</li>
+    <li>Add the vegetables</li>
+    <li>Finish with soy sauce and pepper</li>
+  </ol>
 </body>
 </html>
