--- a/recipes/stirfrycarrots.html
+++ b/recipes/stirfrycarrots.html
@@ -7,7 +7,7 @@
 </head>
 <body>
   <h1>Uncle Lau's stir fry carrots</h1>
-  <img src="../img/stirfrycarrotsjpeg" alt="Bowl of stir fry carrots and veggies">
+  <img src="../img/stirfrycarrotsjpeg" alt="Bowl of stir fry carrots and veggies" width="500">
   <h1>Description</h1>
   <p>Simple to make, only 4 ingredients, haiyaaa, anyone can do it!</p>
   <h1>Ingredients</h1>
