completed the first recipe

--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
 
   <body>
     <h1>Odin recipes</h1>
+    <h2>Stir fry carrots</h2>
     <a href="./recipes/stirfrycarrots.html">Link to stir fry carrots</a>
+    
   </body>
 </html>
