added coq au vin section in the index

--- a/index.html
+++ b/index.html
@@ -7,8 +7,11 @@
 
   <body>
     <h1>Odin recipes</h1>
+
     <h2>Stir fry carrots</h2>
     <a href="./recipes/stirfrycarrots.html">Link to stir fry carrots</a>
     
+    <h2>Coq au vin</h2>
+    <a href="recipes/coqAuVin.html">Click here for the coq au vin recipe</a>
   </body>
 </html>
