--- a/recipes/coqAuVin.html
+++ b/recipes/coqAuVin.html
@@ -6,7 +6,8 @@
   <title>Recette coq au vin</title>
 </head>
 <body>
-  <h1>Description</h1>
+  <h1>Coq au vin</h1>
+  <img src="../img/coqauvin.jpeg" alt="coqauvin picture">
   <p>A classic french recipe, also very simple!</p>
   <h1>Ingredients</h1>
   <ul>
