Added simple CSS

--- a/recipes/coqAuVin.html
+++ b/recipes/coqAuVin.html
@@ -1,14 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <link rel="stylesheet" href="../styles.css">
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Recette coq au vin</title>
 </head>
 <body>
-  <h1>Coq au vin</h1>
-  <img src="../img/coqauvin.jpeg" alt="coqauvin picture">
-  <p>A classic french recipe, also very simple!</p>
+  <h1 class="title">Coq au vin</h1>
+  <img class ="center" src="../img/coqauvin.jpeg" alt="coqauvin picture" width="400px">
+  <p class = "description">  A classic french recipe, also very simple!</p>
   <h1>Ingredients</h1>
   <ul>
     <li>Salt pepper garlic</li>
@@ -30,5 +31,6 @@
     <li>Cover with veal stock. Simmer for 2h30.</li>
     <li>Cook the lardons and add them 15min before the chicken is done. Season to taste.</li>
   </ol>
+  <a class = "return" href="../index.html">Back</a>
 </body>
 </html>
