--- a/recipes/stirfrycarrots.html
+++ b/recipes/stirfrycarrots.html
@@ -1,14 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <link rel="stylesheet" href="../styles.css">
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Stir fry carrots </title>
 </head>
 <body>
-  <h1>Uncle Lau's stir fry carrots</h1>
-  <img src="../img/stirfrycarrots.jpeg" alt="image of stir fried carrots">
-  <p>Simple to make, only 4 ingredients, haiyaaa, anyone can do it!</p>
+  <h1 class="title">Uncle Lau's stir fry carrots</h1>
+  
+  <img class="center" src="../img/stirfrycarrots.jpeg" width="400px" alt="image of stir fried carrots">
+  <p class="description">Simple to make, only 4 ingredients, haiyaaa, anyone can do it!</p>
   <h1>Ingredients</h1>
   <ul>
     <li>Carrots</li>
@@ -26,5 +28,7 @@
     <li>Add the vegetables</li>
     <li>Finish with soy sauce and pepper</li>
   </ol>
+  <a class = "return" href="../index.html">Back</a>
+
 </body>
 </html>
