--- a/index.html
+++ b/index.html
@@ -1,12 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
   <head >
+    <link rel="stylesheet" href="styles.css">
     <meta charset="utf-8">
     <title>Odin recipes </title>
   </head>
 
   <body>
-    <h1>Odin recipes</h1>
+    <h1 class="title">Odin recipes</h1>
 
     <h2>Stir fry carrots</h2>
     <a href="./recipes/stirfrycarrots.html">Link to stir fry carrots</a>
