--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <div class="container">
       <div class = recipe>
         <h2>Stir fry carrots</h2>
+        <img src="./img/stirfrycarrots.jpeg" alt="carrots" width="300px" height="200px">
         <div  class ="link">
           <a href="./recipes/stirfrycarrots.html">Link to stir fry carrots</a>
         </div>
@@ -22,6 +23,7 @@
       
       <div class="recipe">
         <h2>Coq au vin</h2>
+        <img src="./img/coqauvin.jpeg" alt="funnymeal" width="300px" height="200px">
         <div class="link">
           <a href="recipes/coqAuVin.html">Click here for the coq au vin recipe</a>
         </div> 
